--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -1523,6 +1523,7 @@ td.documents-check {
 }
 .no-underline{
 	text-decoration:none;
+	color: inherit;
 }
 .tb-grid .schedule-period{
 	font-weight:bold;
