--- a/include/views/default/cockpit2/frontend/listview/listview-orders.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-orders.phtml
@@ -5,19 +5,15 @@
 			<th>Date</th>
 			<th>Restaurant</th>
 			<th>Customer</th>
-			<th>Driver</th>
 			<th>Order</th>
+			<th>Driver</th>
 			<th>Status</th>
+			<th class="tb-small"></th>
 		</tr>
 		<tr ng-repeat="order in orders track by $index" ng-class="{ 'delivery_it_self': order.delivery_it_self }" ng-attr-tabindex="{{$index+1}}" tab-select="/order/{{order.id_order}}">
 			<td>
 				<?php /* Info */ ?>
-					<div>
-						<a href="/order/{{order.id_order}}">{{order.id_order}}</a>
-					</div>
-					<div class="link no-underline" ng-click="ticket(order.id_order);">
-						<i class="fa fa-comments-o"></i> Ticket
-					</div>
+					<a href="/order/{{order.id_order}}">{{order.id_order}}</a>
 				<?php /* Info */ ?>
 			</td>
 			<td>
@@ -26,25 +22,18 @@
 				<?php /* Date */ ?>
 			</td>
 			<td>
-				<?php /* Restaurant */ ?>
-				<a href="/restaurant/{{order._restaurant_permalink}}">{{order._restaurant_name}}</a><br>
-				<a href="/community/{{order._community_permalink}}" ng-if="!community">{{order._community_name}}</a>
-				<div>
-					<a href ng-click="callText(order._restaurant_phone)">{{order._restaurant_phone | formatPhone}}</a>
-				</div>
-				<?php /* Restaurant */ ?>
+				<? /* Restaurant */ ?>
+				<span class="listview-smaller">
+					<a href="/restaurant/{{order._restaurant_permalink}}">{{order._restaurant_name}}</a><br>
+					<a href="/community/{{order._community_permalink}}" ng-if="!community" class="no-underline">{{order._community_name}}</a>
+				</span>
+				<? /* Restaurant */ ?>
 			</td>
 			<td>
 				<?php /* Customer */ ?>
-					<div><a href="/customer/{{order.id_user}}">{{order.name}}</a></div>
-					<a href ng-click="callText(order.phone)">{{order.phone | formatPhone}}</a>
+					<a href="/customer/{{order.id_user}}">{{order.name}}</a><br>
+					<a href ng-click="callText(order.phone)" class="listview-smaller">{{order.phone | formatPhone}}</a>
 				<?php /* Customer */ ?>
-			</td>
-			<td>
-				<?php /* Driver */ ?>
-					<div><a href="/staff/{{order.status.driver.id_admin}}">{{order.status.driver.name}}</a></div>
-					<div><strong>{{order.status.status}}</strong></div>
-				<?php /* Driver */ ?>
 			</td>
 			<td>
 				<?php /* Order */ ?>
@@ -52,10 +41,32 @@
 				<?php /* Order */ ?>
 			</td>
 			<td>
-				<?php /* Status */ ?>
-				<b>{{order.status.status}}</b><br>
-				<span ng-if="order.status"><span am-time-ago="order.status.date | localtime | timestamp"></span></span>
-				<?php /* Status */ ?>
+				<?php /* Driver */ ?>
+
+					<a href="/staff/{{order.status.driver.id_admin}}">{{order.status.driver.name}}</a><br>
+					<a href ng-click="callText(order.status.driver.phone)" class="listview-smaller">{{order.status.driver.phone | formatPhone}}</a>
+				<?php /* Driver */ ?>
+			</td>
+			<td class="tb-v-center">
+				<span ng-if="order.delivery_service">
+					<span class="tag tag-red" ng-if="order.status.status == 'new'">New</span>
+					<span class="tag tag-green" ng-if="order.status.status == 'accepted'">Accepted</span>
+					<span class="tag tag-blue" ng-if="order.status.status == 'pickedup'">Pickedup</span>
+					<span class="tag tag-purple" ng-if="order.status.status == 'delivered'">Delivered</span>
+				</span>
+				<span ng-if="!order.delivery_service && order._restaurant_confirmation">
+					<span class="tag tag-red" ng-if="!order.confirmed">Unconfirmed</span>
+					<span class="tag tag-green" ng-if="order.confirmed">Confirmed</span>
+				</span>
+				<span ng-if="!order.delivery_service && !order._restaurant_confirmation">
+					<span class="tag tag-grey">Placed</span>
+				</span>
+				<br>
+				<span ng-if="order.status" class="listview-smaller"><span am-time-ago="order.status.date | localtime | timestamp"></span></span>
+			</td>
+			<td nowrap class="tb-v-center">
+				<a href="" ng-click="ticket(order.id_order)"><button class="button button-empty button-empty-green"><i class="fa fa-comment"></i>&nbsp;&nbsp;Ticket</button></a>
+				<a href="/restaurant/{{restaurant.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-eye"></i>&nbsp;&nbsp;View</button></a>
 			</td>
 		</tr>
 	</table>
