lots of minor cockpit design tweaks

--- a/include/views/default/cockpit2/frontend/communities/communities.phtml
+++ b/include/views/default/cockpit2/frontend/communities/communities.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding">
 	<div class="page-title-wrap">
-		<h1 class="title"><i class="fa fa-slideshare"></i>Communities<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
+		<h1 class="title"><i class="fa fa-slideshare"></i>Communities</h1>
 		<div class="page-title-nav">
 			<a href="/community/new"><button class="button button-green nav-button-green"><i class="fa fa-plus"></i></button></a>
 		</div>
