--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-list.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-list.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding">
 
-	<h1 class="title"><i class="fa fa-automobile"></i>Driver Onboarding<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
+	<h1 class="title"><i class="fa fa-automobile"></i>Driver Onboarding</h1>
 
 	<div class="box-content2 box-content-table">
 		<table>
