--- a/include/views/default/cockpit2/frontend/support/support-phone.phtml
+++ b/include/views/default/cockpit2/frontend/support/support-phone.phtml
@@ -1,115 +1,114 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
+	<h1 class="title"><i class="fa fa-comments-o"></i> Make a call / Send SMS</h1>
+</div>
 
-	<h1 class="title left"><i class="fa fa-comments-o"></i> Make a call / Send SMS</h1>
+<div class="content-padding col-box">
 
-	<div class="divider"></div>
+	<div class="two-col">
+		<div class="ul-inputs box-content2">
+			<form name="formCall" novalidate>
 
-	<navigation-back></navigation-back>
+				<ul ng-class="{'submitted':formCallSubmitted}" class="ul-inputs">
 
-	<div class="ul-inputs box-content2">
+					<li class="li-input">
+						<strong>Make a call</strong>
+					</li>
 
-		<form name="formCall" novalidate>
+					<li class="li-input">
+						<div class="label">Choose an admin/driver:</div>
+						<div class="input">
+							<select name="staff" ng-model="call.staff" required ng-options="opt.phone as opt.name for opt in staff"></select>
+						</div>
+					</li>
 
-			<ul ng-class="{'submitted':formCallSubmitted}" class="ul-inputs">
+					<li class="li-input" ng-class="{'error':formCall.phone.$invalid}">
+						<div class="label">Phone:</div>
+						<div class="input"><input type="text" name="phone" required  placeholder="Phone" ng-model="call.phone"></div>
+						<div class="box-error">
+							<small ng-show="formCall.phone.$error.required">Required.</small>
+						</div>
+					</li>
 
-				<li class="li-input">
-					<strong>Make a call</strong>
-				</li>
+					<li class="li-input" ng-class="{'error':formCall.to.$invalid}">
+						<div class="label">Are you calling to:</div>
+						<div class="input">
+							<select name="to" ng-model="call.to" required ng-options="opt.to as opt.label for opt in call._to"></select>
+						</div>
+						<div class="box-error">
+							<small ng-show="formCall.to.$error.required">Required.</small>
+						</div>
+					</li>
 
-				<li class="li-input">
-					<div class="label">Choose an admin/driver:</div>
-					<div class="input">
-						<select name="staff" ng-model="call.staff" required ng-options="opt.phone as opt.name for opt in staff"></select>
-					</div>
-				</li>
+					<li class="li-input" ng-show="!formCallSending">
+						<button class="button save" ng-click="call.make();"><i class="fa fa-phone"></i> Call</button>
+					</li>
+					<li class="li-input" ng-show="formCallSending">
+						<i class="fa fa-circle-o-notch fa-spin"></i>
+					</li>
 
-				<li class="li-input" ng-class="{'error':formCall.phone.$invalid}">
-					<div class="label">Phone:</div>
-					<div class="input"><input type="text" name="phone" required  placeholder="Phone" ng-model="call.phone"></div>
-					<div class="box-error">
-						<small ng-show="formCall.phone.$error.required">Required.</small>
-					</div>
-				</li>
+				</ul>
 
-				<li class="li-input" ng-class="{'error':formCall.to.$invalid}">
-					<div class="label">Are you calling to:</div>
-					<div class="input">
-						<select name="to" ng-model="call.to" required ng-options="opt.to as opt.label for opt in call._to"></select>
-					</div>
-					<div class="box-error">
-						<small ng-show="formCall.to.$error.required">Required.</small>
-					</div>
-				</li>
+			</form>
 
-				<li class="li-input" ng-show="!formCallSending">
-					<button class="button save" ng-click="call.make();"><i class="fa fa-phone"></i> Call</button>
-				</li>
-				<li class="li-input" ng-show="formCallSending">
-					<i class="fa fa-circle-o-notch fa-spin"></i>
-				</li>
-
-			</ul>
-
-		</form>
-
+		</div>
 	</div>
 
-	<div class="ul-inputs box-content2">
+	<div class="two-col">
+		<div class="ul-inputs box-content2">
 
-		<form name="formSMS" novalidate>
+			<form name="formSMS" novalidate>
 
-			<ul ng-class="{'submitted':formSMSSubmitted}" class="ul-inputs">
+				<ul ng-class="{'submitted':formSMSSubmitted}" class="ul-inputs">
 
-				<li class="li-input">
-					<strong>Send SMS</strong>
-				</li>
+					<li class="li-input">
+						<strong>Send SMS</strong>
+					</li>
 
-				<li class="li-input">
-					<div class="label">Choose an admin/driver:</div>
-					<div class="input">
-						<select name="staff" ng-model="sms.staff" required ng-options="( opt.phone + '##' + opt.name ) as opt.name for opt in staff"></select>
-					</div>
-				</li>
+					<li class="li-input">
+						<div class="label">Choose an admin/driver:</div>
+						<div class="input">
+							<select name="staff" ng-model="sms.staff" required ng-options="( opt.phone + '##' + opt.name ) as opt.name for opt in staff"></select>
+						</div>
+					</li>
 
-				<li class="li-input" ng-class="{'error':formSMS.name.$invalid}">
-					<div class="label">Name:</div>
-					<div class="input"><input type="text" name="name" required  placeholder="Phone" ng-model="sms.name"></div>
-					<div class="box-error">
-						<small ng-show="formSMS.name.$error.required">Required.</small>
-					</div>
-				</li>
+					<li class="li-input" ng-class="{'error':formSMS.name.$invalid}">
+						<div class="label">Name:</div>
+						<div class="input"><input type="text" name="name" required  placeholder="Phone" ng-model="sms.name"></div>
+						<div class="box-error">
+							<small ng-show="formSMS.name.$error.required">Required.</small>
+						</div>
+					</li>
 
-				<li class="li-input" ng-class="{'error':formSMS.phone.$invalid}">
-					<div class="label">Phone:</div>
-					<div class="input"><input type="text" name="phone" required  placeholder="Phone" ng-model="sms.phone"></div>
-					<div class="box-error">
-						<small ng-show="formSMS.phone.$error.required">Required.</small>
-					</div>
-				</li>
+					<li class="li-input" ng-class="{'error':formSMS.phone.$invalid}">
+						<div class="label">Phone:</div>
+						<div class="input"><input type="text" name="phone" required  placeholder="Phone" ng-model="sms.phone"></div>
+						<div class="box-error">
+							<small ng-show="formSMS.phone.$error.required">Required.</small>
+						</div>
+					</li>
 
-				<li class="li-input" ng-class="{'error':formSMS.message.$invalid}">
-					<div class="label">Phone:</div>
-					<div class="input"><input type="text" name="message" required  placeholder="Message" ng-model="sms.message"></div>
-					<div class="box-error">
-						<small ng-show="formSMS.message.$error.required">Required.</small>
-					</div>
-				</li>
+					<li class="li-input" ng-class="{'error':formSMS.message.$invalid}">
+						<div class="label">Phone:</div>
+						<div class="input"><input type="text" name="message" required  placeholder="Message" ng-model="sms.message"></div>
+						<div class="box-error">
+							<small ng-show="formSMS.message.$error.required">Required.</small>
+						</div>
+					</li>
 
-				<li class="li-input" ng-show="!formSMSSending">
-					<button class="button save" ng-click="sms.send();"><i class="fa fa-comment"></i> Send SMS</button>
-				</li>
-				<li class="li-input" ng-show="formSMSSending">
-					<i class="fa fa-circle-o-notch fa-spin"></i>
-				</li>
+					<li class="li-input" ng-show="!formSMSSending">
+						<button class="button save" ng-click="sms.send();"><i class="fa fa-comment"></i> Send SMS</button>
+					</li>
+					<li class="li-input" ng-show="formSMSSending">
+						<i class="fa fa-circle-o-notch fa-spin"></i>
+					</li>
 
-			</ul>
+				</ul>
 
-		</form>
+			</form>
 
+		</div>
 	</div>
 
 </div>
-
-<hack-expand-content></hack-expand-content>
