driver onboarding design tweaks

--- a/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-list.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-onboarding-list.phtml
@@ -2,7 +2,14 @@
 
 <div class="content-padding">
 
-	<h1 class="title"><i class="fa fa-automobile"></i>Driver Onboarding</h1>
+	<div class="page-title-wrap">
+		<h1 class="title"><i class="fa fa-automobile"></i>Driver Onboarding</h1>
+		<div class="page-title-nav">
+			<a href="/drivers/onboarding/docs"><button class="button button-green nav-button-grey"><i class="fa fa-briefcase"></i><span>Documents</span></button></a>
+			<a href="/drivers/onboarding/new"><button class="button button-green nav-button-green"><i class="fa fa-plus"></i><span>Add Driver</span></button></a>
+		</div>
+	</div>
+	<div class="divider"></div>
 
 	<div class="box-content2 box-content-table">
 		<table>
@@ -13,11 +20,6 @@
 	</div>
 	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 
-	<h2>
-		<a href="/drivers/onboarding/docs">Documents</a> |
-		<a href="/drivers/onboarding/new">Create a new driver</a>
-	</h2>
-	<br><br>
 
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
