--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -4061,12 +4061,10 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
 	width: auto;
 	text-transform: none;
 }
-.page-title-wrap .page-title-nav button .fa {
-	margin-right: .5em;
-}
 .page-title-wrap .page-title-nav button span {
 	font-size: .9em;
 	vertical-align: top;
+	margin-left: .5em;
 }
 
 .listview-smaller {
