cockpit staff page changes

--- a/include/views/default/cockpit2/frontend/staff/staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff.phtml
@@ -4,7 +4,8 @@
 	<div class="page-title-wrap">
 		<h1 class="title"><i class="fa fa-users"></i>Staff</h1>
 		<div class="page-title-nav">
-			<a href="/staff/marketing/new"><button class="button button-green nav-button-green"><i class="fa fa-plus"></i><span>Create Marketing Rep</span></button></a>
+			<a href="/staff/marketing/new"><button class="button button-green nav-button-green"><i class="fa fa-plus"></i><span>Add Marketing Rep</span></button></a>
+			<a href="/drivers/onboarding/new"><button class="button button-green nav-button-green"><i class="fa fa-plus"></i><span>Add Driver</span></button></a>
 		</div>
 	</div>
 	<div class="divider"></div>
