--- a/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
@@ -19,9 +19,16 @@
 
 	<div class="support-boxes">
 
-		<div class="support-box-wrap">
-			<h1>Info</h1>
-			<div class="box-content-color">
+		<div class="support-box-wrap box-content2">
+			<div class="support-box-wrap-header">
+				<h1>Info</h1>
+				<div class="support-box-header-actions">
+
+				</div>
+				<div class="divider"></div>
+			</div>
+
+			<div class="no-box-content-color">
 				<div class="field-container">
 					<div class="field-row">
 						<div class="field-key">Name</div>
@@ -60,14 +67,46 @@
 
 			</div>
 		</div>
+		
+		
+		<div class="support-box-wrap box-content2">
+			<div class="support-box-wrap-header">
+				<h1>Pex Card</h1>
+				<div class="support-box-header-actions">
+					<span class="tag tag-green" ng-if="staff.pexcard.active">Active</span>
+					<span class="tag tag-red" ng-if="!staff.pexcard.active">Inctive</span>
+				</div>
+				<div class="divider"></div>
+			</div>
+			
+			<div class="no-box-content-color" ng-if="staff.pexcard.active">
+				<div class="field-container">
+					<div class="field-row">
+						<div class="field-key">Serial</div>
+						<div class="field-value">{{staff.pexcard.card_serial}}</div>
+					</div>
+					<div class="field-row">
+						<div class="field-key">Last Four</div>
+						<div class="field-value">{{staff.pexcard.last_four }}</div>
+					</div>
 
+				</div>
+
+			</div>
+		</div>
+		
+<? /*
 		<div class="support-box-wrap">
 			<h1>Location</h1>
 			<map zoom="12" center="false" class="maps-map" map-type-control="false" style="height: 230px;" options="{streetViewControl: false}">
 
 			</map>
 		</div>
+		*/ ?>
+		
 	</div>
+	
+	<div class="divider"></div>
 
 	<h1 class="title"><i class="fa fa-calendar"></i>Shifts</h1>
 	<div class="box-content2 box-content-table">
