--- a/include/views/default/seven/frontend/restaurant.phtml
+++ b/include/views/default/seven/frontend/restaurant.phtml
@@ -325,7 +325,7 @@
 
 							<div class="payment-form-group form-group" ng-show="order.form.pay_type=='card'">
 								<i class="fa fa-credit-card payment-form-icon form-icon form-field"></i>
-								<input ng-focus="softKeyboard($event);" type="tel" name="pay-card-number" tabindex="6" ng-change="order.creditCardChanged();" ng-model="order.form.cardNumber" class="payment-form-input form-input form-field">
+								<input ng-focus="softKeyboard($event);" type="tel" name="pay-card-number" tabindex="6" ng-change="order.creditCardChanged();" ng-model="order.form.cardNumber" class="payment-form-input form-input form-field" id="cardNumber">
 							</div>
 
 							<div class="payment-form-group form-group" ng-show="order.form.pay_type=='card'">
