--- a/include/views/default/cockpit2/frontend/listview/listview-orders.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-orders.phtml
@@ -66,7 +66,7 @@
 			</td>
 			<td nowrap class="tb-v-center">
 				<a href="" ng-click="ticket(order.id_order)"><button class="button button-empty button-empty-green"><i class="fa fa-comment"></i>&nbsp;&nbsp;Ticket</button></a>
-				<a href="/restaurant/{{restaurant.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-eye"></i>&nbsp;&nbsp;View</button></a>
+				<a href="/order/{{order.id_order}}"><button class="button button-empty button-empty-green"><i class="fa fa-eye"></i>&nbsp;&nbsp;View</button></a>
 			</td>
 		</tr>
 	</table>
