--- a/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
@@ -87,7 +87,7 @@
 						<div class="field-value">{{staff.pexcard.last_four }}</div>
 					</div>
 					<div class="field-row">
-						<div class="field-key"><a href="/staff/{{staff.login}}/pexcard"><button class="button button-small button-small-green"><i class="fa fa-eye"></i>&nbsp;&nbsp;Add Funds</button></a></div>
+						<div class="field-key"><a href="/staff/{{staff.login}}/pexcard"><button class="button button-small button-small-green"><i class="fa fa-plus"></i>&nbsp;&nbsp;Add Funds</button></a></div>
 						<div class="field-value"></div>
 					</div>
 				</div>
@@ -95,7 +95,7 @@
 			<div class="no-box-content-color" ng-if="!staff.pexcard.active">
 				<div class="field-container">
 					<div class="field-row">
-						<div class="field-key"><a href="/pexcard/card/driver/{{staff.id_admin}}"><button class="button button-small button-small-green">Add Card</button></a></div>
+						<div class="field-key"><a href="/pexcard/card/driver/{{staff.id_admin}}"><button class="button button-small button-small-green"><i class="fa fa-plus"></i>&nbsp;&nbsp;Add Card</button></a></div>
 						<div class="field-value"></div>
 					</div>
 				</div>
