--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -4129,3 +4129,10 @@ body[class*=" page-drivers-welcome-"] .nav-top .nav-back {
 		border: .5em solid $background;
 	}
 }
+
+h1.title.box-title {
+	margin-bottom: 1em;
+}
+.bar-loader.bar-loader-search.bar-loader-boxes-top {
+	margin-bottom: 0;
+}
