--- a/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-staff.phtml
@@ -11,9 +11,6 @@
 		<div class="support-box-wrap box-content2">
 			<div class="support-box-wrap-header">
 				<h1>Info</h1>
-				<div class="support-box-header-actions">
-
-				</div>
 				<div class="divider"></div>
 			</div>
 
@@ -104,13 +101,12 @@
 				<div class="field-container">
 					<div class="field-row">
 						<div class="field-key"><a href="/settlement/drivers/payments?driver={{staff.id_admin}}">Settlement</a></div>
-						<div class="field-value"></div>
+						<div class="field-value"><a href="/drivers/onboarding/{{staff.id_admin}}">Driver Info</a></div>
 					</div>
 					<div class="field-row">
 						<div class="field-key"><a href="/drivers/summary/{{staff.id_admin}}">Payments</a></div>
 						<div class="field-value"><a href="/staff/{{staff.login}}/payinfo">Payment Info</a></div>
 					</div>
-
 				</div>
 			</div>
 		</div>
