--- a/include/views/default/cockpit2/frontend/listview/listview-restaurants.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-restaurants.phtml
@@ -40,8 +40,8 @@
 				<span ng-if="restaurant.orders == '0'">0</span>
 			</td>
 			<td><span ng-if="restaurant._order_date"><span am-time-ago="restaurant._order_date"></span></span></td>
-	
-	
+
+
 			<td nowrap class="tb-center tb-v-center">
 				<span class="tag tag-green" ng-if="restaurant.active">Active</span>
 				<span class="tag tag-red" ng-if="!restaurant.active">Inactive</span>
@@ -61,6 +61,7 @@
 			</td>
 			<td nowrap class="tb-v-center">
 				<a href="https://cockpit.crunchbutton.com/restaurants/{{restaurant.id_restaurant}}" target="_system"><button class="button button-empty button-empty-green"><i class="fa fa-pencil"></i>&nbsp;&nbsp;Edit</button></a>
+				<a href="/restaurant/payment-info/{{restaurant.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-money"></i>&nbsp;&nbsp;Pay Info</button></a>
 				<a href="/restaurant/{{restaurant.permalink}}"><button class="button button-empty button-empty-green"><i class="fa fa-eye"></i>&nbsp;&nbsp;View</button></a>
 			</td>
 		</tr>
