--- a/include/views/default/cockpit2/layout/html.phtml
+++ b/include/views/default/cockpit2/layout/html.phtml
@@ -10,4 +10,7 @@
 
 <script src="//maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
 <script src="//js.stripe.com/v2/" bundle="false"></script>
+<script type="text/javascript">
+	Stripe.setPublishableKey( '<?=c::config()->stripe->{c::getEnv()}->{'public'}?>' );
+</script>
 <? /* &key=AIzaSyBSQXZPG5n_yRG4umquaDANsL62uhlgaE8 */ ?>
